# fretboard-visualizer

./: .gitignore  CMakeLists.txt  README.md
html/: app.js  app.wasm  index.html  midiconvert.js  script.js  style.css
src/: bindings.cpp  bindings.h  data.h  global.cpp  global.h  main.cpp  neck.cpp  neck.h
